# api/openapi.yaml
@@ -249,6 +249,24 @@ paths:
                     example: invalid_request
         '500':
           description: Internal Server Error
+  /op/userinfo:
+    get:
+      tags:
+        - OP
+      summary: UserInfo Request
+      description: https://openid.net/specs/openid-connect-core-1_0.html#UserInfo
+      operationId: opUserinfo
+      security:
+        - Bearer: []      
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OPUserInfoResponseSchema'
+        '500':
+          description: Internal Server Error
   /rp/login:
     get:
       tags:
@@ -296,10 +314,10 @@ paths:
           description: Internal Server Error
 components:
   securitySchemes:
-    apiKey:
-      type: apiKey
-      name: api-key
-      in: header
+    Bearer:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     IdPSignUpRequestSchema:
       type: object
@@ -406,9 +424,41 @@ components:
           type: string
           description: id_token
           example: id_token
+    OPUserInfoResponseSchema:
+      type: object
+      description: https://openid.net/specs/openid-connect-core-1_0.html#UserInfoResponse
+      properties:
+        sub:
+          type: string
+          description: sub
+          example: sub
+        name:
+          type: string
+          description: name
+          example: name
+        given_name:
+          type: string
+          description: given_name
+          example: given_name
+        family_name:
+          type: string
+          description: family_name
+          example: family_name
+        preferred_username:
+          type: string
+          description: preferred_username
+          example: preferred_username
+      required:
+        - sub
+        - name
+        - given_name
+        - family_name
+        - preferred_username
     IDTokenSchema:
       type: object
-      description: https://openid-foundation-japan.github.io/openid-connect-core-1_0.ja.html#IDToken
+      description: |
+        https://openid-foundation-japan.github.io/openid-connect-core-1_0.ja.html#IDToken
+        https://openid.net/specs/openid-connect-core-1_0.html#StandardClaims
       properties:
         iss:
           type: string
