# pkg/openapi/types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package openapi
 
+const (
+	BearerScopes = "Bearer.Scopes"
+)
+
 // Defines values for OpAuthorizeParamsResponseType.
 const (
 	Code             OpAuthorizeParamsResponseType = "code"
@@ -85,6 +89,24 @@ type OPTokenResponseSchema struct {
 
 	// TokenType token_type
 	TokenType *string `json:"token_type,omitempty"`
+}
+
+// OPUserInfoResponseSchema https://openid.net/specs/openid-connect-core-1_0.html#UserInfoResponse
+type OPUserInfoResponseSchema struct {
+	// FamilyName family_name
+	FamilyName string `json:"family_name"`
+
+	// GivenName given_name
+	GivenName string `json:"given_name"`
+
+	// Name name
+	Name string `json:"name"`
+
+	// PreferredUsername preferred_username
+	PreferredUsername string `json:"preferred_username"`
+
+	// Sub sub
+	Sub string `json:"sub"`
 }
 
 // OpAuthorizeParams defines parameters for OpAuthorize.
